cmake_minimum_required(VERSION 3.4)
project(KeyValueStore)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_executable(navie_store key_value_store.h pure_memory_key_value_store.h test_naive_store.cpp)
add_executable(pure_memory_key_value_store pure_memory_key_value_store.h serializer.h test_pure_memory_store.cpp)
add_executable(test_memory_caced_key_value_store memory_cached_hash_key_value_store.h test_memory_caced_key_value_store.cpp)

add_subdirectory(malloc-test)
add_subdirectory(unorder_map_string_string)
add_subdirectory(serialize_test)
add_executable(traverse_directory traverse_directory/TraverseDir.cpp)
add_executable(string_stream_study traverse_directory/StringStream.cpp)
add_executable(string_stream_reverse traverse_directory/StringStreamReverseRead.cpp)
add_executable(fstream_study traverse_directory/FstreamRWStudy.cpp)