cmake_minimum_required(VERSION 3.4)
project(KeyValueStore)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g -Wall")

add_executable(navie_store multiple_file_key_value_store.h pure_memory_key_value_store.h test_multiple_file_naive_store.cpp)
add_executable(pure_memory_key_value_store pure_memory_key_value_store.h serializer.h test_pure_memory_store.cpp)
add_executable(test_memory_caced_key_value_store memory_cached_hash_key_value_store.h test_memory_caced_key_value_store.cpp)
#add_executable(test_simple_key_value_store simple_key_value_store.h test_simple_key_value_store.cpp)
add_executable(test_default_key_value_store default_key_value_store.h test_default_key_value_store.cpp)

add_subdirectory(malloc-test)
add_subdirectory(unorder_map_string_string)
add_subdirectory(serialize_test)
add_executable(traverse_directory traverse_directory/TraverseDir.cpp)
add_executable(string_stream_study traverse_directory/StringStream.cpp)
add_executable(string_stream_reverse traverse_directory/StringStreamReverseRead.cpp)
add_executable(fstream_study traverse_directory/FstreamRWStudy.cpp)
add_executable(string_Study traverse_directory/StringStudy.cpp)
add_executable(convert_study traverse_directory/CharArrayConvertInt32.cpp)
add_executable(test_async_io asio/test_async_io.cpp)
target_link_libraries(test_async_io rt)
add_executable(test_mmap asio/test_mmap.cpp)