cmake_minimum_required(VERSION 3.4)
project(KeyValueStore)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g -Wall")

add_executable(navie_store multiple_file_key_value_store.h pure_memory_key_value_store.h test_multiple_file_naive_store.cpp)
add_executable(pure_memory_key_value_store pure_memory_key_value_store.h test_pure_memory_store.cpp)
add_executable(test_memory_caced_key_value_store memory_cached_hash_key_value_store.h test_memory_caced_key_value_store.cpp)
#add_executable(test_simple_key_value_store simple_key_value_store.h test_simple_key_value_store.cpp)
add_executable(test_default_key_value_store default_key_value_store.h test_default_key_value_store.cpp)

add_subdirectory(malloc_max_study)
add_subdirectory(stl_hash_map_study)
add_executable(string_file_study string_file_study/TraverseDir.cpp)
add_executable(string_stream_study string_file_study/StringStream.cpp)
add_executable(string_stream_reverse string_file_study/StringStreamReverseRead.cpp)
add_executable(fstream_study string_file_study/FstreamRWStudy.cpp)
add_executable(string_Study string_file_study/StringStudy.cpp)
add_executable(convert_study string_file_study/CharArrayConvertInt32.cpp)
add_executable(test_async_io async_and_mmap_study/test_async_io.cpp)
target_link_libraries(test_async_io rt)
add_executable(test_mmap async_and_mmap_study/test_mmap.cpp)