add_executable(navie_store multiple_file_key_value_store.h all_in_memory/pure_memory_key_value_store.h test_multiple_file_naive_store.cpp)
add_executable(pure_memory_key_value_store all_in_memory/pure_memory_key_value_store.h all_in_memory/test_pure_memory_store.cpp)
add_executable(test_memory_caced_key_value_store memory_cached_hash_key_value_store.h test_memory_caced_key_value_store.cpp)
add_executable(test_default_key_value_store default_key_value_store.h test_default_key_value_store.cpp)
add_executable(efficient_io_key_value_store final_version/efficient_io_key_value_store.cpp final_version/efficient_io_key_value_store.h)
#add_executable(final_version_key_value_store final_version/final_version_key_value_store.cpp final_version/final_version_key_value_store.cpp)

add_executable(mmap_based_key_value_store mmap_based_key_value_store.h test_mmap_based_key_value_store.cpp)
add_executable(test_another all_in_memory/another_simple_key_value.h all_in_memory/test_another.cpp)
add_executable(disk_only_key_value_store final_version/disk_only_key_value_store.cpp final_version/disk_only_key_value_store.h)