add_subdirectory(all_in_memory)
add_subdirectory(some_in_memory)
add_subdirectory(other)
add_executable(final_version_key_value_store final_version/final_version_key_value_store.cpp final_version/final_version_key_value_store.cpp)
add_executable(correct_one final_version/correct_final_version_key_value.h final_version/test_correct_final_version_key_value.cpp)