add_executable(test_memory_caced_key_value_store memory_cached_hash_key_value_store.h test_memory_caced_key_value_store.cpp)
add_executable(test_fixed_aligned_key_value_store fixed_aligned_key_value_store.h test_fixed_aligned_key_value_store.cpp)
add_executable(test_multiple_file_naive_store multiple_file_key_value_store.h test_multiple_file_naive_store.cpp)